--- a/pages/audio/answers/answers.wxml
+++ b/pages/audio/answers/answers.wxml
@@ -2,5 +2,6 @@
 <view class="container">
 
   <text class='word-content '>{{text}}</text>
+  <loading hidden="{{hidden}}">加载中...</loading>
 
 </view>
