--- a/pages/audio/chooseListAudio.wxss
+++ b/pages/audio/chooseListAudio.wxss
@@ -92,7 +92,7 @@ src: url('/assets/font/chalkboard.ttf'),
   width: 90%;
   margin-top: 10px;
   padding:10px;
-  background-color:  #CFD8DC;
+  background-color:  #d5d5d5;
   font-family: Songti TC;
   font-size: 32rpx;
   color: #455a64;
@@ -105,7 +105,7 @@ src: url('/assets/font/chalkboard.ttf'),
 
 .display_show{
   display: block;
-  border: 1px solid #CED3DC;
+  border: 1px solid #d5d5d5;
   border-bottom:0.8px solid #ffffff;
   padding: 10px;
 }
