--- a/pages/audio/listening/audio.wxss
+++ b/pages/audio/listening/audio.wxss
@@ -8,11 +8,14 @@
   height: 100%;
   justify-content: space-between;
   box-sizing: border-box;
+  margin-top: 30%;
 }
+
 .control-div{
   display: flex;
   flex-direction: column;
-  margin-top: 25%;
+  margin-top: 55%;
+  position: absolute;
 }
 
 .title-view{
@@ -48,3 +51,15 @@
   color: white;
 }
 
+.word-definition {
+  margin-top: 20rpx;
+  font-family: Yuanti TC;
+  font-size: 30rpx;
+  color: #585858;
+}
+
+.word-progress{
+  margin-top: 20rpx;
+  height: 5rpx;
+  width: 500rpx;
+}
