--- a/pages/settings/description/description.wxss
+++ b/pages/settings/description/description.wxss
@@ -8,6 +8,11 @@
   justify-content: space-between;
   box-sizing: border-box;
   margin-top: 2%;
+  padding-top: 12%;
+}
+
+.good-img{
+  height: 400px;
 }
 
 .wordsdescription{
@@ -16,7 +21,7 @@
 }
 
 .word-title{
-  margin-bottom: 20rpx;
+  margin-bottom: 10rpx;
   font-family: Yuanti TC;
   align-content: center;
   font-size: 40rpx;
