--- a/pages/settings/settings.wxml
+++ b/pages/settings/settings.wxml
@@ -9,12 +9,14 @@
     <image class="list-icon" src="/images/chevron.png"></image>
   </view>
   <view class="list-item" bindtap="showDescription">
-    <text class="list-name">软件说明</text>
+    <text class="list-name">赞赏作者</text>
     <image class="list-icon" src="/images/chevron.png"></image>
   </view>
-  <view class="list-item" bindtap="showFeedback">
+  <!-- <view class="list-item" bindtap="showFeedback"> -->
+  <button open-type='contact' class="list-contact">
     <text class="list-name">用户反馈</text>
     <image class="list-icon" src="/images/chevron.png"></image>
-  </view>
+  </button>
+  <!-- </view> -->
   </view>
 </view>
